--- a/WebApplication1/WebApplication1/Views/Dentist/Index.cshtml
+++ b/WebApplication1/WebApplication1/Views/Dentist/Index.cshtml
@@ -2,7 +2,7 @@
     ViewBag.Title = "Home Page";
 }
 @using WebApplication1.Enumerations
-@model WebApplication1.Models.Dentist
+@model WebApplication1.ViewModels.Dentist.DentistIndexViewModel
 
 <head>
     <link href="~/Content/css/CustomLeftNavbar.css" rel="stylesheet" />
@@ -14,19 +14,19 @@
 <div class="profile-head">
 <div class="col-md- col-sm-4 col-xs-12">
     <img src="http://www.newlifefamilychiropractic.net/wp-content/uploads/2014/07/300x300.gif" class="img-responsive" />
-    <h6>@Html.DisplayFor(d => d.FirstName)
-        @Html.DisplayFor(d => d.LastName)
+    <h6>@Html.DisplayFor(d => d.Dentist.FirstName)
+        @Html.DisplayFor(d => d.Dentist.LastName)
     </h6>
 </div>
 
 <div class="col-md-5 col-sm-5 col-xs-12">
-<h5>@Html.DisplayFor(d => d.FirstName) @Html.DisplayFor(d => d.LastName)</h5> 
+<h5>@Html.DisplayFor(d => d.Dentist.FirstName) @Html.DisplayFor(d => d.Dentist.LastName)</h5> 
 <p>Dentist </p>
 <ul>
-<li><span class="glyphicon glyphicon-gift"></span>@Html.DisplayFor(model=> model.DateOfBirth)</li>
-<li><span class="glyphicon glyphicon-home"></span>@Html.DisplayFor(model => model.Address)</li>
+<li><span class="glyphicon glyphicon-gift"></span>@Html.DisplayFor(model=> model.Dentist.DateOfBirth)</li>
+<li><span class="glyphicon glyphicon-home"></span>@Html.DisplayFor(model => model.Dentist.Address)</li>
 <li><span class="glyphicon glyphicon-phone"></span> <a href="#" title="call">061123456789</a></li>
-<li><span class="glyphicon glyphicon-envelope"></span><a href="#" title="mail">@Html.DisplayFor(model => model.Email)</a></li>
+<li><span class="glyphicon glyphicon-envelope"></span><a href="#" title="mail">@Html.DisplayFor(model => model.Dentist.Email)</a></li>
 
 </ul>
 </div>
