--- a/WebApplication1/WebApplication1/Views/Home/Index.cshtml
+++ b/WebApplication1/WebApplication1/Views/Home/Index.cshtml
@@ -1,15 +1,18 @@
-﻿@{
+﻿@model IEnumerable<WebApplication1.Models.Note>
+@{
     ViewBag.Title = "Home Page";
 }
 
 <div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="http://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
-</div>
+    <h1>Hello!</h1>
+    <p class="lead">Get the latest news and updates! See all informations about our application here.</p>
+    <p>  @*<a href="LINK FOR ALL UPDATES" class="btn btn-primary btn-lg">See all updates &raquo;</a>*@ 
+         @Html.ActionLink("See all updates >>", "ListAllUpdates", null, new { @class="btn btn-primary btn-lg" } ) 
+    </p>
+</div >
 
 <div class="row">
-    <div class="col-md-4">
+    @*<div class="col-md-4">
         <h2>Getting started</h2>
         <p>
             ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
@@ -27,5 +30,20 @@
         <h2>Web Hosting</h2>
         <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
         <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
-    </div>
+    </div>*@
+
+        @foreach (var item in Model)
+        {
+            <div class="col-md-3" style="border: 2px solid #102dde; margin-left: 40px; border-radius: 10px" >
+                <h2>@Html.DisplayFor(modelItem => item.Title).ToHtmlString()</h2>
+                <p style="font-size: x-small">@Html.DisplayFor(modelItem => item.DateCreated).ToHtmlString()</p>
+                <div style="overflow: hidden; text-overflow: ellipsis; display: -webkit-box; line-height: 16px; max-height: 48px; -webkit-line-clamp: 6; -webkit-box-orient: vertical">
+                    <p>@Html.DisplayFor(modelItem => item.Comment).ToHtmlString()...</p>
+                </div>
+                <br />
+                <a href="">Read more...</a>
+                
+            </div>
+        }
+        
 </div>
