--- a/WebApplication1/WebApplication1/Views/Shared/_LoginPartial.cshtml
+++ b/WebApplication1/WebApplication1/Views/Shared/_LoginPartial.cshtml
@@ -3,7 +3,9 @@
 @using WebApplication1.Models
 @{
     List<Appointment> appointments = ViewBag.appointmentRequests;
+    List<Patient> patients = ViewBag.patientRequests;
 }
+
 @if (Request.IsAuthenticated)
 {
     using (Html.BeginForm("LogOff", "Account", FormMethod.Post, new { id = "logoutForm", @class = "navbar-right" }))
@@ -28,9 +30,21 @@
 
                 </ul>
             </li>
+            <li class="dropdown">
+                <a href="#" data-toggle="dropdown" class="dropdown-toggle"><span class="glyphicon glyphicon-user"></span></a>
+                <ul class="dropdown-menu">
+
+                    @foreach (var item in patients)
+                    {
+                        <li>@Html.ActionLink(@Html.DisplayFor(modelItem => item.FirstName).ToHtmlString(), "ApprovePatient","Dentist", new {id = item.Id}, new {@class="glyphicon glyphicon-ok", style="float: right"})</li>
+                    }
+
+
+                </ul>
+            </li>
         }
             <li>
-                <a href="@Url.Action("Inbox", "Message")"><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span></a>
+                
             </li>
        
         <li class="dropdown">
