Created view for admin to manage updates

--- a/WebApplication1/WebApplication1/Views/Shared/_Layout.cshtml
+++ b/WebApplication1/WebApplication1/Views/Shared/_Layout.cshtml
@@ -77,7 +77,8 @@
                                 <li>@Html.ActionLink("List Patients ", "GetPatients", "Admin")</li>
                             </ul>
                         </li>
-                                       
+
+                        <li>@Html.ActionLink("Manage Updates", "Updates", "Admin")</li>
                     }
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
                 </ul>
