Dentist/MyAppointments is functioning. Few more things to do, mockup mail works. Will be finished by Friday at 5 in shaa Allah :)

--- a/WebApplication1/WebApplication1/Views/Account/Login.cshtml
+++ b/WebApplication1/WebApplication1/Views/Account/Login.cshtml
@@ -34,7 +34,7 @@
                     <div class="social-box">
                         <div class="row mg-btm">
                             <div class="col-md-12">
-                                <a href="#" class="btn btn-primary btn-block">
+                                <a href="" class="btn btn-primary btn-block">
                                     <i class="icon-facebook"></i>    Login with Facebook
                                 </a>
                             </div>
